# bferris413.github.io

./: .gitignore  index.html  projects.html  style.css  styles.css
posts/: dover.html  first.html  metal_arm_0.html  metal_arm_1.html  metal_arm_2.html  metal_arm_3.html  metal_arm_4.html  metal_arm_5.html  metal_arm_intro.html  posts.html  rust_dependency.html  second.html  third.html  warmup.html
site-builder/: Cargo.toml  tailwind.config.js
site-builder/deploy/: tailwind.config.js  tw.css
site-builder/deploy/posts/: 01_first.md  02_second.md
site-builder/deploy/templates/: index.html  post.html  posts.html
site-builder/scripts/: dev_watch.sh  local_deploy.sh  run_bot_publish.sh  run_tailwind.sh
site-builder/src/: main.rs
site-builder/templates/: debug_commits.json  index.html  post_template.html  tw.css
site-builder/templates/posts/: first.md  posts.html  second.md
sketches/: Home Page.drawio
static/: sample_diff.html  style.css
