[package]
name = "site-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["serde-well-known", "macros"] }
tokio = { version = "1.40.0", features = ["net", "fs", "rt-multi-thread", "macros"] }
